# CS513

./: .gitignore  ML03_knn_iris.ipynb  flake.nix  pyproject.toml
data/: hepatitis_A.csv  hepatitis_B2.csv  hepatitis_C2.csv  hepatitis_D2.csv  iris_modified.csv
homework/: John_Rizzo_HW01_Probability.tex  John_Rizzo_HW02_EDA.ipynb  John_Rizzo_HW03_KNN.ipynb  John_Rizzo_HW04_CART.ipynb  John_Rizzo_HW04_DTree.xlsx  John_Rizzo_HW06_C45_C50_RF.ipynb  John_Rizzo_HW06_C45_C50_RF.xlsx  John_Rizzo_HW07_NB.ipynb  John_Rizzo_HW08_ANN.ipynb  John_Rizzo_MIDTERM_3-5.ipynb  John_Rizzo_MIDTERM_6-7.xlsx  John_Rizzo_Midterm_1-2.docx
hw1/: John_Rizzo_HW01_Probability.tex
hw3/: John_Rizzo_HW03_KNN.ipynb
lessons/: ML02_EDA.ipynb  ML06_CART_Titanic.ipynb  ML07_C50_Titanic.ipynb  ML07_RF_Titanic.ipynb  ML08_ANN_simple.ipynb  ML08_tensorflow_iris.ipynb  Mod08_ANN_Matrix_Larose_example.ipynb  Mod08_tf_sqrt.ipynb  kNN.ipynb
