[project]
name = "cs513"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydantic-settings>=2.7.1",
    "scikit-learn>=1.6.1",
    "ydata-profiling>=4.12.2",
]
